# LunaticRenderer2

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  note.md  shit.json
.VSCodeCounter/2023-02-27_22-30-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.devcontainer/: devcontainer.json
Components/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  Component.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityComponentSystem.hpp  EntityManager.hpp  RenderSystem.hpp  Renderer.cpp  Renderer.h  RendererFactory.h  TestSystem.cpp  TestSystem.h  TransformComponent.h
Components/test/: EntityManagerTest.cpp  RenderingSystemTest.cpp
Systems/: CMakeLists.txt  ImguiComponent.h  ImguiManager.h  LunaticEngineBody.cpp  LunaticEngineBody.h  RenderingManager.cpp  RenderingManager.h
doc/: doc.mdj  note.md
lunatic_engine/: main.cpp
lunatic_engine/assets/Models/: Sniper_Stand.fbx  TestModel.fbx  box.fbx  sbFlower.fbx  shitBox.fbx
lunatic_engine/assets/Shader/: TriangleShader_fs.glsl  TriangleShader_vs.glsl
lunatic_engine/core/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  IOManager.cpp  IOManager.h  LunaticEngine.cpp  LunaticEngine.h  RenderingCore.cpp  RenderingCore.h  RenderingManager.h  ResourceCore.cpp  ResourceCore.h
lunatic_engine/core/content/: Content.h  ImageContent.h  MeshContent.h  ShaderContent.h
lunatic_engine/editor/: ImguiComponent.h  ImguiManager.h
lunatic_engine/function/: CMakeLists.txt  Entity.hpp  EntityManager.hpp  System.hpp
lunatic_engine/function/Components/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  EntityComponentSystem.hpp  EntityManager.hpp  Material.hpp  Mesh.hpp  RenderSystem.hpp  TestSystem.cpp  TestSystem.h  Transform.cpp  Transform.h  TransformComponent.h
lunatic_engine/function/Components/test/: RenderingSystemTest.cpp
lunatic_engine/function/Core/: Component.hpp  Entity.hpp  EntityManager.hpp  RegistryStation.cpp  RegistryStation.h  System.hpp
lunatic_engine/function/Systems/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  RenderSystem.hpp  TestSystem.h
lunatic_engine/function/Tools/: ModelEntityFactory.cpp  ModelEntityFactory.h  ModelEntityFactory.hpp
test/: CMakeLists.txt  EntityManagerTest.cpp  GetWorldTransformTest.cpp  JsonDemo.cpp  MemoryDemo.cpp  RegistryStationTest.cpp  RenderingSystemTest.cpp
