aux_source_directory(Systems DIR_COPONENT)
aux_source_directory(.hpp DIR_COPONENT_HPP)
aux_source_directory(.h DIR_COPONENT_H)

include_directories("../core")
add_library(LIB_COMPONENT STATIC ${DIR_COPONENT} ${DIR_COPONENT_HPP} ${DIR_COPONENT_H})
#find_library(lunatic_core "../core")
#add_subdirectory("./Core")
find_package(glad CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)

target_link_libraries(LIB_COMPONENT PRIVATE glad::glad)
target_link_libraries(LIB_COMPONENT PRIVATE glfw)
target_link_libraries(LIB_COMPONENT PRIVATE lunatic_core)
target_link_libraries(LIB_COMPONENT PUBLIC fmt::fmt-header-only)
#target_link_libraries(LIB_COMPONENT PRIVATE ECS_core)
